--- a/index.html
+++ b/index.html
@@ -206,7 +206,36 @@
                                     <input type="radio" name="rating-10" class="bg-Nav-bg-color mask mask-star-2 mask-half-2" />
                                   </div>
                                   <div class="card-actions">
-                                    <button class="text-Nav-bg-color">Details</button>
+                                    <!-- Open the modal using ID.showModal() method -->
+                                    <button class=" text-Nav-bg-color" onclick="my_modal_1.showModal()">Details</button>
+                                    <dialog id="my_modal_1" class="modal">
+                                      <form method="dialog" class="modal-box">
+                                        <figure class="px-10 pt-10">
+                                            <img src="./images/fruit6.png" alt="Shoes" class="rounded-xl" />
+                                          </figure>
+                                            <div class="card-body items-center text-center h-56">
+                                                <h2 class="card-title  mb-1">Apples</h2>
+                                                <p>Professional employees are there for you to pick the most amazing and fresh fruits.</p>
+                                                <div class="rating rating-lg rating-half mt-3 mb-3">
+                                                  <input type="radio" name="rating-10" class="rating-hidden" />
+                                                  <input type="radio" name="rating-10" class="bg-Nav-bg-color mask mask-star-2 mask-half-1" />
+                                                  <input type="radio" name="rating-10" class="bg-Nav-bg-color mask mask-star-2 mask-half-2" />
+                                                  <input type="radio" name="rating-10" class="bg-Nav-bg-color mask mask-star-2 mask-half-1" checked />
+                                                  <input type="radio" name="rating-10" class="bg-Nav-bg-color mask mask-star-2 mask-half-2" />
+                                                  <input type="radio" name="rating-10" class="bg-Nav-bg-color mask mask-star-2 mask-half-1" />
+                                                  <input type="radio" name="rating-10" class="bg-Nav-bg-color mask mask-star-2 mask-half-2" />
+                                                  <input type="radio" name="rating-10" class="bg-Nav-bg-color mask mask-star-2 mask-half-1" />
+                                                  <input type="radio" name="rating-10" class="bg-Nav-bg-color mask mask-star-2 mask-half-2" />
+                                                  <input type="radio" name="rating-10" class="bg-Nav-bg-color mask mask-star-2 mask-half-1" />
+                                                  <input type="radio" name="rating-10" class="bg-Nav-bg-color mask mask-star-2 mask-half-2" />
+                                                </div>
+                                            </div>
+                                        <div class="modal-action">
+                                          <!-- if there is a button in form, it will close the modal -->
+                                          <button class="btn">Close</button>
+                                        </div>
+                                      </form>
+                                    </dialog>
                                   </div>
                                 </div>
                             </div>
@@ -234,7 +263,36 @@
                                     <input type="radio" name="rating-10" class="bg-Nav-bg-color mask mask-star-2 mask-half-2" />
                                   </div>
                                   <div class="card-actions">
-                                    <button class="text-Nav-bg-color">Details</button>
+                                    <!-- Open the modal using ID.showModal() method -->
+                                    <button class=" text-Nav-bg-color" onclick="my_modal_2.showModal()">Details</button>
+                                    <dialog id="my_modal_2" class="modal">
+                                      <form method="dialog" class="modal-box">
+                                        <figure class="px-10 pt-10">
+                                            <img src="./images/fruit7.png" alt="Shoes" class="rounded-xl" />
+                                          </figure>
+                                            <div class="card-body items-center text-center h-56">
+                                                <h2 class="card-title  mb-1">Orange</h2>
+                                                <p>Professional employees are there for you to pick the most amazing and fresh fruits.</p>
+                                                <div class="rating rating-lg rating-half mt-3 mb-3">
+                                                  <input type="radio" name="rating-10" class="rating-hidden" />
+                                                  <input type="radio" name="rating-10" class="bg-Nav-bg-color mask mask-star-2 mask-half-1" />
+                                                  <input type="radio" name="rating-10" class="bg-Nav-bg-color mask mask-star-2 mask-half-2" />
+                                                  <input type="radio" name="rating-10" class="bg-Nav-bg-color mask mask-star-2 mask-half-1" checked />
+                                                  <input type="radio" name="rating-10" class="bg-Nav-bg-color mask mask-star-2 mask-half-2" />
+                                                  <input type="radio" name="rating-10" class="bg-Nav-bg-color mask mask-star-2 mask-half-1" />
+                                                  <input type="radio" name="rating-10" class="bg-Nav-bg-color mask mask-star-2 mask-half-2" />
+                                                  <input type="radio" name="rating-10" class="bg-Nav-bg-color mask mask-star-2 mask-half-1" />
+                                                  <input type="radio" name="rating-10" class="bg-Nav-bg-color mask mask-star-2 mask-half-2" />
+                                                  <input type="radio" name="rating-10" class="bg-Nav-bg-color mask mask-star-2 mask-half-1" />
+                                                  <input type="radio" name="rating-10" class="bg-Nav-bg-color mask mask-star-2 mask-half-2" />
+                                                </div>
+                                            </div>
+                                        <div class="modal-action">
+                                          <!-- if there is a button in form, it will close the modal -->
+                                          <button class="btn">Close</button>
+                                        </div>
+                                      </form>
+                                    </dialog>
                                   </div>
                                 </div>
                             </div>
@@ -263,7 +321,36 @@
                                     <input type="radio" name="rating-10" class="bg-Nav-bg-color mask mask-star-2 mask-half-2" />
                                   </div>
                                   <div class="card-actions">
-                                    <button class="text-Nav-bg-color">Details</button>
+                                    <!-- Open the modal using ID.showModal() method -->
+                                    <button class=" text-Nav-bg-color" onclick="my_modal_3.showModal()">Details</button>
+                                    <dialog id="my_modal_3" class="modal">
+                                      <form method="dialog" class="modal-box">
+                                        <figure class="px-10 pt-10">
+                                            <img src="./images/fruit8.png" alt="Shoes" class="rounded-xl" />
+                                          </figure>
+                                            <div class="card-body items-center text-center h-56">
+                                                <h2 class="card-title  mb-1">Red Dragon</h2>
+                                                <p>Professional employees are there for you to pick the most amazing and fresh fruits.</p>
+                                                <div class="rating rating-lg rating-half mt-3 mb-3">
+                                                  <input type="radio" name="rating-10" class="rating-hidden" />
+                                                  <input type="radio" name="rating-10" class="bg-Nav-bg-color mask mask-star-2 mask-half-1" />
+                                                  <input type="radio" name="rating-10" class="bg-Nav-bg-color mask mask-star-2 mask-half-2" />
+                                                  <input type="radio" name="rating-10" class="bg-Nav-bg-color mask mask-star-2 mask-half-1" checked />
+                                                  <input type="radio" name="rating-10" class="bg-Nav-bg-color mask mask-star-2 mask-half-2" />
+                                                  <input type="radio" name="rating-10" class="bg-Nav-bg-color mask mask-star-2 mask-half-1" />
+                                                  <input type="radio" name="rating-10" class="bg-Nav-bg-color mask mask-star-2 mask-half-2" />
+                                                  <input type="radio" name="rating-10" class="bg-Nav-bg-color mask mask-star-2 mask-half-1" />
+                                                  <input type="radio" name="rating-10" class="bg-Nav-bg-color mask mask-star-2 mask-half-2" />
+                                                  <input type="radio" name="rating-10" class="bg-Nav-bg-color mask mask-star-2 mask-half-1" />
+                                                  <input type="radio" name="rating-10" class="bg-Nav-bg-color mask mask-star-2 mask-half-2" />
+                                                </div>
+                                            </div>
+                                        <div class="modal-action">
+                                          <!-- if there is a button in form, it will close the modal -->
+                                          <button class="btn">Close</button>
+                                        </div>
+                                      </form>
+                                    </dialog>
                                   </div>
                                 </div>
                             </div>
@@ -292,7 +379,36 @@
                                     <input type="radio" name="rating-10" class="bg-Nav-bg-color mask mask-star-2 mask-half-2" />
                                   </div>
                                   <div class="card-actions">
-                                    <button class="text-Nav-bg-color">Details</button>
+                                    <!-- Open the modal using ID.showModal() method -->
+                                    <button class=" text-Nav-bg-color" onclick="my_modal_4.showModal()">Details</button>
+                                    <dialog id="my_modal_4" class="modal">
+                                      <form method="dialog" class="modal-box">
+                                        <figure class="px-10 pt-10">
+                                            <img src="./images/fruit9.png" alt="Shoes" class="rounded-xl" />
+                                          </figure>
+                                            <div class="card-body items-center text-center h-56">
+                                                <h2 class="card-title  mb-1">Banana</h2>
+                                                <p>Professional employees are there for you to pick the most amazing and fresh fruits.</p>
+                                                <div class="rating rating-lg rating-half mt-3 mb-3">
+                                                  <input type="radio" name="rating-10" class="rating-hidden" />
+                                                  <input type="radio" name="rating-10" class="bg-Nav-bg-color mask mask-star-2 mask-half-1" />
+                                                  <input type="radio" name="rating-10" class="bg-Nav-bg-color mask mask-star-2 mask-half-2" />
+                                                  <input type="radio" name="rating-10" class="bg-Nav-bg-color mask mask-star-2 mask-half-1" checked />
+                                                  <input type="radio" name="rating-10" class="bg-Nav-bg-color mask mask-star-2 mask-half-2" />
+                                                  <input type="radio" name="rating-10" class="bg-Nav-bg-color mask mask-star-2 mask-half-1" />
+                                                  <input type="radio" name="rating-10" class="bg-Nav-bg-color mask mask-star-2 mask-half-2" />
+                                                  <input type="radio" name="rating-10" class="bg-Nav-bg-color mask mask-star-2 mask-half-1" />
+                                                  <input type="radio" name="rating-10" class="bg-Nav-bg-color mask mask-star-2 mask-half-2" />
+                                                  <input type="radio" name="rating-10" class="bg-Nav-bg-color mask mask-star-2 mask-half-1" />
+                                                  <input type="radio" name="rating-10" class="bg-Nav-bg-color mask mask-star-2 mask-half-2" />
+                                                </div>
+                                            </div>
+                                        <div class="modal-action">
+                                          <!-- if there is a button in form, it will close the modal -->
+                                          <button class="btn">Close</button>
+                                        </div>
+                                      </form>
+                                    </dialog>
                                   </div>
                                 </div>
                             </div>
