--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
                     <div id="slide1" class="carousel-item relative w-full min-h-[90vh] bg-no-repeat bg-center rounded-lg" style="background-image: url(./images/banner1.png);">
                         <div class="flex justify-center items-center w-full bg-[rgba(18, 18, 18, 0.00)] ">
                             <div class="text-white text-center">
-                                <h1 class=" lg:text-7xl text-4xl font-extrabold">Exotic tastes at your <br> doorstep</h1>
+                                <h1 class=" lg:text-7xl text-4xl font-extrabold mt-20">Exotic tastes at your <br> doorstep</h1>
                                 <p class="text-xl font-medium mt-6">We supply highly quality organic products</p>
                                 <button class="btn bg-Nav-bg-color border-none text-white text-xl font-extrabold mt-12">Shop Now</button>
                             </div>
@@ -81,7 +81,7 @@
                     <div id="slide2" class="carousel-item relative w-full min-h-full bg-no-repeat bg-center rounded-lg " style="background-image: url(./images/banner2.png),linear-gradient(180deg, #121212 0%, rgba(18, 18, 18, 0.00) 100%);">
                         <div class="flex justify-center items-center w-full">
                             <div class="text-white text-center relative ">
-                                <h1 class=" text-7xl font-extrabold">Exotic tastes at your <br> doorstep</h1>
+                                <h1 class=" lg:text-7xl text-4xl font-extrabold mt-20">Exotic tastes at your <br> doorstep</h1>
                                 <p class="text-xl font-medium mt-6">We supply highly quality organic products</p>
                                 <button class="btn bg-Nav-bg-color border-none text-white text-xl font-extrabold mt-12">Shop Now</button>
                             </div>
@@ -94,7 +94,7 @@
                     <div id="slide3" class="carousel-item relative w-full min-h-full bg-no-repeat bg-center rounded-lg " style="background-image: url(./images/banner3.png);">
                         <div class="flex justify-center items-center w-full">
                             <div class="text-white text-center relative ">
-                                <h1 class=" text-7xl font-extrabold">Exotic tastes at your <br> doorstep</h1>
+                                <h1 class=" lg:text-7xl text-4xl font-extrabold mt-20">Exotic tastes at your <br> doorstep</h1>
                                 <p class="text-xl font-medium mt-6">We supply highly quality organic products</p>
                                 <button class="btn bg-Nav-bg-color border-none text-white text-xl font-extrabold mt-12">Shop Now</button>
                             </div>
@@ -107,7 +107,7 @@
                     <div id="slide4" class="carousel-item relative w-full min-h-full bg-no-repeat bg-center rounded-lg " style="background-image: url(./images/banner4.png);">
                         <div class="flex justify-center items-center w-full">
                             <div class="text-white text-center relative ">
-                                <h1 class=" text-7xl font-extrabold">Exotic tastes at your <br> doorstep</h1>
+                                <h1 class=" lg:text-7xl text-4xl font-extrabold mt-20">Exotic tastes at your <br> doorstep</h1>
                                 <p class="text-xl font-medium mt-6">We supply highly quality organic products</p>
                                 <button class="btn bg-Nav-bg-color border-none text-white text-xl font-extrabold mt-12">Shop Now</button>
                             </div>
@@ -523,11 +523,11 @@
                         <div class="lg:flex lg:flex-row-reverse lg:text-end justify-center items-center text-center mt-12">
                             <div class="flex justify-center">
                                 <div class="w-12  h-12 bg-whay-choose-color flex justify-center items-center rounded-[50%]">
-                                    <i class="fa-solid fa-users-line h-6 w-6 flex justify-center items-center"></i>
+                                    <i class="fa-solid fa-seedling h-6 w-6 flex justify-center items-center"></i>
                                 </div>
                             </div>
                             <div class="mx-6">
-                                <h3 class="text-2xl font-extrabold">Dedicated Team</h3>
+                                <h3 class="text-2xl font-extrabold">Integrated Supplier</h3>
                                 <hr class="w-24 my-4 bg-[#121212] lg:ml-56 ml-36">
                                 <p>Professional employees are there for you to pick the most amazing and fresh fruits.</p>
                             </div>
@@ -535,11 +535,11 @@
                         <div class="lg:flex lg:flex-row-reverse lg:text-end justify-center items-center text-center mt-12">
                             <div class="flex justify-center">
                                 <div class="w-12 h-12 bg-whay-choose-color flex justify-center items-center rounded-[50%]">
-                                    <i class="fa-regular fa-heart h-6 w-6 flex justify-center items-center"></i>
+                                    <i class="fa-solid fa-ice-cream h-6 w-6 flex justify-center items-center"></i>
                                 </div>
                             </div>
                             <div class="mx-6">
-                                <h3 class="text-2xl font-extrabold">Fresh is Best</h3>
+                                <h3 class="text-2xl font-extrabold">Sustainable Practice</h3>
                                 <hr class="w-24 my-4 bg-[#121212] lg:ml-56 ml-36">
                                 <p>Professional employees are there for you to pick the most amazing and fresh fruits.</p>
                             </div>
@@ -547,11 +547,11 @@
                         <div class="lg:flex lg:flex-row-reverse lg:text-end justify-center items-center text-center mt-12">
                             <div class="flex justify-center">
                                 <div class="w-12 h-12 bg-whay-choose-color flex justify-center items-center rounded-[50%]">
-                                    <i class="fa-solid fa-gift h-6 w-6 flex justify-center items-center"></i>
+                                    <i class="fa-solid fa-thumbs-up h-6 w-6 flex justify-center items-center"></i>
                                 </div>
                             </div>
                             <div class="mx-6">
-                                <h3 class="text-2xl font-extrabold">Gift Certificates</h3>
+                                <h3 class="text-2xl font-extrabold">The Benefits Only</h3>
                                 <hr class="w-24 my-4 bg-[#121212] lg:ml-56 ml-36">
                                 <p>Professional employees are there for you to pick the most amazing and fresh fruits.</p>
                             </div>
