--- a/index.html
+++ b/index.html
@@ -32,8 +32,8 @@
 </head>
 <body>
     <header class="flex justify-center mt-12 lato-font">
-        <div class="container lg:max-w-7xl">
-            <div class="navbar lg:bg-Nav-bg-color rounded-full lg:flex-row justify-between ">
+        <div class="container lg:max-w-7xl md:max-w-2xl">
+            <div class="navbar lg:bg-Nav-bg-color md:bg-Nav-bg-color rounded-full lg:flex-row justify-between ">
                 <div class="navbar-start lg:text-white text-black w-auto">
                   <div class="dropdown">
                     <label tabindex="0" class="btn btn-ghost lg:hidden flex-col-reverse">
@@ -56,7 +56,7 @@
                   </div>
                 </div>
                 <a class="btn btn-ghost normal-case text-xl lg:text-white text-black"><img class="w-10" src="./images/logo.png" alt=""> Fruti Burst</a>
-                <div class="navbar-end mr-12 lg:inline-flex hidden w-auto">
+                <div class="navbar-end md:mr-4 mr-12 lg:inline-flex md:inline-flex hidden w-auto">
                     <input type="text" placeholder="Search" class="input rounded-full md:w-[300px]" />
                     <button class="btn btn-ghost btn-circle -ml-14">
                         <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5" fill="none" viewBox="0 0 24 24" stroke="currentColor"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M21 21l-6-6m2-5a7 7 0 11-14 0 7 7 0 0114 0z" /></svg>
@@ -64,7 +64,7 @@
                 </div>
             </div>
             <section class="mt-14 mb-6 relative">
-                <div class="carousel lg:max-w-7xl max-w-sm mx-5">
+                <div class="carousel lg:max-w-7xl md:max-w-[46rem] max-w-sm mx-5">
                     <div id="slide1" class="carousel-item relative w-full min-h-[90vh] bg-no-repeat bg-center rounded-lg" style="background-image: url(./images/banner1.png);">
                         <div class="flex justify-center items-center w-full bg-[rgba(18, 18, 18, 0.00)] ">
                             <div class="text-white text-center">
@@ -151,7 +151,7 @@
                 <div class="lg:flex justify-between mt-32 ">
                     <div>
                         <h1 class="text-5xl font-extrabold lg:text-start text-center">Deal of the day</h1>
-                        <p class="font-medium max-w-2xl lg:text-start text-center">Contrary to popular belief, is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old.</p>
+                        <p class="font-medium lg:max-w-2xl md:mx-28 lg:text-start text-center">Contrary to popular belief, is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old.</p>
                     </div>
                     <div>
                         <div class="grid grid-flow-col gap-5 text-center justify-center mt-5 auto-cols-max">
@@ -183,7 +183,7 @@
                     </div>
                 </div>
                 <div>
-                    <div class="lg:flex gap-6 justify-center ">
+                    <div class=" grid lg:grid-cols-4 md:grid-cols-2 grid-cols-1 gap-6 justify-center ">
                         <div>
                             <div class="card lg:w-64 mx-3 mt-8 bg-base-100 shadow-xl border">
                                 <figure class="px-10 pt-10">
@@ -240,7 +240,7 @@
                                 </div>
                             </div>
                         </div>
-                    <div>
+                      <div>
                         <div>
                             <div class="card lg:w-64 mx-3 mt-8 bg-base-100 shadow-xl border">
                                 <figure class="px-10 pt-10">
@@ -297,7 +297,7 @@
                                 </div>
                             </div>
                         </div>
-                    </div>
+                      </div>
                     <div>
                         <div>
                             <div class="card lg:w-64 mx-3 mt-8 bg-base-100 shadow-xl border">
@@ -355,7 +355,7 @@
                                 </div>
                             </div>
                         </div>
-                    </div>
+                      </div>
                     <div>
                         <div>
                             <div class="card lg:w-64 mx-3 mt-8 bg-base-100 shadow-xl border">
@@ -414,7 +414,7 @@
                             </div>
                         </div>
                     </div>
-                </div>
+                  </div>
                 <div class="flex justify-center mt-12 ">
                     <button class="btn bg-Nav-bg-color hover:bg-Nav-bg-color border-none px-8 text-white">See All</button>
                 </div>
@@ -429,7 +429,7 @@
                     <p class="mb-5">Contrary to popular belief, is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old.</p>
                     <div class="lg:flex justify-center items-center text-center lg:gap-16">
                         <div class=" lg:w-60 mt-8 ">
-                            <img class="lg:ml-14 ml-[8.5rem]" src="./images/member1.png" alt="">
+                            <img class="lg:ml-14 md:ml-[16.5rem] ml-[8.5rem]" src="./images/member1.png" alt="">
                             <h1 class="mt-8 font-bold text-2xl">Awlad Hossain</h1>
                             <p>Fruits Expert</p>
                             <div class="flex gap-3 justify-center mt-4 cursor-pointer lg:w-60">
@@ -439,7 +439,7 @@
                             </div>
                         </div>
                         <div class=" lg:w-60 mt-8">
-                            <img class="lg:ml-14 ml-[8.5rem]" src="./images/member2.png" alt="">
+                            <img class="lg:ml-14 md:ml-[16.5rem] ml-[8.5rem]" src="./images/member2.png" alt="">
                             <h1 class="mt-8 font-bold text-2xl">ASafia Chowdhury</h1>
                             <p>Fruits Expert</p>
                             <div class="flex gap-3 justify-center mt-4 cursor-pointer lg:w-60">
@@ -449,7 +449,7 @@
                             </div>
                         </div>
                         <div class=" lg:w-60 mt-8">
-                            <img class="lg:ml-14 ml-[8.5rem]" src="./images/member3.png" alt="">
+                            <img class="lg:ml-14 md:ml-[16.5rem] ml-[8.5rem]" src="./images/member3.png" alt="">
                             <h1 class="mt-8 font-bold text-2xl">Rokib Hossain</h1>
                             <p>Fruits Expert</p>
                             <div class="flex gap-3 justify-center mt-4 cursor-pointer lg:w-60">
@@ -459,7 +459,7 @@
                             </div>
                         </div>
                         <div class=" lg:w-60 mt-8">
-                            <img class="lg:ml-14 ml-[8.5rem]" src="./images/member4.png" alt="">
+                            <img class="lg:ml-14 md:ml-[16.5rem] ml-[8.5rem]" src="./images/member4.png" alt="">
                             <h1 class="mt-8 font-bold text-2xl">Chaity</h1>
                             <p>Fruits Expert</p>
                             <div class="flex gap-3 justify-center mt-4 cursor-pointer lg:w-60">
@@ -476,7 +476,7 @@
         <section class="flex justify-center lato-font mt-32 ">
             <div class="container lg:max-w-7xl">
                 <h1 class="text-5xl font-extrabold text-center">Why Choose Us</h1>
-                <p class="text-center lg:mx-80">Contrary to popular belief, is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old.</p>
+                <p class="text-center lg:mx-80 md:mx-28">Contrary to popular belief, is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old.</p>
                 <div class="grid lg:grid-cols-3 grid-cols-1 mt-12">
                     <div>
                         <div class="lg:flex lg:text-start justify-center items-center text-center mt-12">
@@ -516,7 +516,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="mt-12">
+                    <div class="mt-12 flex justify-center">
                         <img class="h-[28rem]" src="./images/whychoose1.png" alt="">
                     </div>
                     <div>
@@ -565,13 +565,13 @@
         <div>
             <a class="btn btn-ghost normal-case text-xl lg:text-white text-white"><img class="w-10" src="./images/logo.png" alt=""> Fruti Burst</a>
         </div>
-        <div class="grid lg:grid-cols-6 grid-cols-4 gap-4">
+        <div class="grid lg:grid-cols-6 md:grid-cols-6 grid-cols-4 gap-4">
           <a class="link link-hover">Home</a> 
           <a class="link link-hover">About Us</a> 
           <a class="link link-hover">Shop</a> 
           <a class="link link-hover">All Fruits</a>
-          <a class="link link-hover lg:ml-0 ml-44">Support</a>
-          <a class="link link-hover lg:ml-0 ml-48">My Account</a>
+          <a class="link link-hover lg:ml-0 md:ml-0 ml-44">Support</a>
+          <a class="link link-hover lg:ml-0 md:ml-0 ml-48">My Account</a>
 
         </div> 
         <div>
