--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
                   </div>
             </section>
             <section class="lg:flex justify-center hidden ">
-                <div class="flex gap-20 h-40 max-w-5xl px-10 bg-white justify-center items-center text-center absolute -mt-32">
+                <div class="flex gap-20 h-40 max-w-5xl px-10 bg-white rounded-lg justify-center items-center text-center absolute -mt-32">
                     <div>
                         <img src="./images/fruit1.png" alt="">
                         <p class="text-xl font-medium">Strawberry</p>
